Update azure-pipelines.yml for Azure Pipelines-edited

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,19 +3,12 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-
 pool:
   vmImage: ubuntu-latest
 
 variables:
 - name: DEV_ENVIRONMENT
   value: delano
-
-
-# Stage-1: Terraform Validate Stage
-## Step-1: Publish Artifacts to Pipeline (Pipeline artifacts provide a way to share files between stages in a pipeline or between different pipelines. )
-## Step-2: Install Latest Terraform (0.13.5) (Ideally not needed if we use default Ubuntu Agents)
-## Step-3: Validate Terraform Manifests (terraform init, terraform validate)
 
 stages:
 - stage: TerraformValidate
@@ -39,7 +32,7 @@ stages:
           provider: 'azurerm'
           command: 'init'
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-          backendServiceArm: 'terraform-aks-azurerm-svc-con'
+          backendServiceArm: 'capstone-svc-conn'
           backendAzureRmResourceGroupName: 'terraform-storage-rg'
           backendAzureRmStorageAccountName: 'terraformstatestoragevvk'
           backendAzureRmContainerName: 'tfstatefiles'
@@ -50,14 +43,6 @@ stages:
           command: 'validate'
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
           allowTelemetryCollection: false
-
-# Stage-2: Deploy Stages for Dev & QA
-# Deployment-1: Deploy Dev AKS Cluster
-## Step-1: Define Variables for environments
-## Step-2: Download SSH Secure File
-## Step-3: Terraform Initialize (State Storage to store in Azure Storage Account for Dev AKS Cluster)
-## Step-4: Terraform Plan (Create Plan)
-## Step-5: Terraform Apply (Use the plan created in previous step)
 
 - stage: DeployAKSClusters
   jobs:
@@ -81,7 +66,7 @@ stages:
                 provider: 'azurerm'
                 command: 'init'
                 workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
-                backendServiceArm: 'terraform-aks-azurerm-svc-con'
+                backendServiceArm: 'capstone-svc-conn'
                 backendAzureRmResourceGroupName: 'terraform-storage-rg'
                 backendAzureRmStorageAccountName: 'terraformstatestoragevvk'
                 backendAzureRmContainerName: 'tfstatefiles'
@@ -93,7 +78,7 @@ stages:
                 provider: 'azurerm'
                 command: 'plan'
                 workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
-                environmentServiceNameAzureRM: 'terraform-aks-azurerm-svc-con'
+                environmentServiceNameAzureRM: 'capstone-svc-conn'
                 commandOptions: '-var ssh_public_key=$(sshkey.secureFilePath) -var environment=$(DEV_ENVIRONMENT) -out $(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
                 allowTelemetryCollection: false
             
@@ -102,7 +87,7 @@ stages:
                 provider: 'azurerm'
                 command: 'apply'
                 workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
-                environmentServiceNameAzureRM: 'terraform-aks-azurerm-svc-con'
+                environmentServiceNameAzureRM: 'capstone-svc-conn'
                 commandOptions: '$(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
                 allowTelemetryCollection: false
 
