--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,87 +7,109 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-- name: DEV_ENVIRONMENT
-  value: delano
+  - name: DEV_ENVIRONMENT
+    value: delano
 
 stages:
-- stage: TerraformValidate
-  jobs:
-    - job: TerraformValidateJob
-      continueOnError: false
-      steps:
-      - task: PublishPipelineArtifact@1
-        displayName: Publish Artifacts
-        inputs:
-          targetPath: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-          artifact: 'terraform-manifests-out'
-          publishLocation: 'pipeline'
+  - stage: TerraformValidate
+    jobs:
+      - job: TerraformValidateJob
+        continueOnError: false
+        steps:
+          - task: PublishPipelineArtifact@1
+            displayName: Publish Artifacts
+            inputs:
+              targetPath: '$(System.DefaultWorkingDirectory)/terraform-manifests'
+              artifact: 'terraform-manifests-out'
+              publishLocation: 'pipeline'
+          - task: charleszipp.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-installer.TerraformInstaller@0
+            inputs:
+              terraformVersion: 'latest'
+          - task: TerraformTaskV4@4
+            inputs:
+              provider: 'azurerm'
+              command: 'init'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
+              backendServiceArm: 'capstone-svc-conn'
+              backendAzureRmResourceGroupName: 'terraform-storage-rg'
+              backendAzureRmStorageAccountName: 'terraformstatestoragevvk'
+              backendAzureRmContainerName: 'tfstatefiles'
+              backendAzureRmKey: 'aks-terraform.tfstate'
+          - task: TerraformCLI@0
+            displayName: Terraform Validate
+            inputs:
+              command: 'validate'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
+              allowTelemetryCollection: false
 
-      - task: charleszipp.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-installer.TerraformInstaller@0
-        inputs:
-          terraformVersion: 'latest'
-      
-      - task: TerraformTaskV4@4
-        inputs:
-          provider: 'azurerm'
-          command: 'init'
-          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-          backendServiceArm: 'capstone-svc-conn'
-          backendAzureRmResourceGroupName: 'terraform-storage-rg'
-          backendAzureRmStorageAccountName: 'terraformstatestoragevvk'
-          backendAzureRmContainerName: 'tfstatefiles'
-          backendAzureRmKey: 'aks-terraform.tfstate'
-      - task: TerraformCLI@0
-        displayName: Terraform Validate
-        inputs:
-          command: 'validate'
-          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-          allowTelemetryCollection: false
+  - stage: DeployAKSClusters
+    jobs:
+      - deployment: DeployDevAKSCluster
+        displayName: DeployDevAKSCluster
+        pool:
+          vmImage: 'ubuntu-latest'
+        environment: $(DEV_ENVIRONMENT)
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - task: DownloadSecureFile@1
+                  displayName: Download SSH Key
+                  name: sshkey
+                  inputs:
+                    secureFile: 'aks-terraform-devops-ssh-key-ububtu.pub'
+                - task: TerraformTaskV4@4
+                  inputs:
+                    provider: 'azurerm'
+                    command: 'init'
+                    workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                    backendServiceArm: 'capstone-svc-conn'
+                    backendAzureRmResourceGroupName: 'terraform-storage-rg'
+                    backendAzureRmStorageAccountName: 'terraformstatestoragevvk'
+                    backendAzureRmContainerName: 'tfstatefiles'
+                    backendAzureRmKey: 'aks-$(DEV_ENVIRONMENT).tfstate'
+                    allowTelemetryCollection: false
+                - task: TerraformTaskV4@4
+                  inputs:
+                    provider: 'azurerm'
+                    command: 'plan'
+                    workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                    environmentServiceNameAzureRM: 'capstone-svc-conn'
+                    commandOptions: '-var ssh_public_key=$(sshkey.secureFilePath) -var environment=$(DEV_ENVIRONMENT) -out $(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
+                    allowTelemetryCollection: false
+                - task: TerraformTaskV4@4
+                  inputs:
+                    provider: 'azurerm'
+                    command: 'apply'
+                    workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                    environmentServiceNameAzureRM: 'capstone-svc-conn'
+                    commandOptions: '$(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
+                    allowTelemetryCollection: false
 
-- stage: DeployAKSClusters
-  jobs:
-    - deployment: DeployDevAKSCluster
-      displayName: DeployDevAKSCluster
-      pool:
-        vmImage: 'ubuntu-latest'
-      environment: $(DEV_ENVIRONMENT)      
-      strategy:
-        runOnce:
-          deploy:
-            steps:            
-          
-            - task: DownloadSecureFile@1
-              displayName: Download SSH Key
-              name: sshkey
-              inputs:
-                secureFile: 'aks-terraform-devops-ssh-key-ububtu.pub'
-            - task: TerraformTaskV4@4
-              inputs:
-                provider: 'azurerm'
-                command: 'init'
-                workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
-                backendServiceArm: 'capstone-svc-conn'
-                backendAzureRmResourceGroupName: 'terraform-storage-rg'
-                backendAzureRmStorageAccountName: 'terraformstatestoragevvk'
-                backendAzureRmContainerName: 'tfstatefiles'
-                backendAzureRmKey: 'aks-$(DEV_ENVIRONMENT).tfstate'
-                allowTelemetryCollection: false
-
-            - task: TerraformTaskV4@4
-              inputs:
-                provider: 'azurerm'
-                command: 'plan'
-                workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
-                environmentServiceNameAzureRM: 'capstone-svc-conn'
-                commandOptions: '-var ssh_public_key=$(sshkey.secureFilePath) -var environment=$(DEV_ENVIRONMENT) -out $(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
-                allowTelemetryCollection: false
-            
-            - task: TerraformTaskV4@4
-              inputs:
-                provider: 'azurerm'
-                command: 'apply'
-                workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
-                environmentServiceNameAzureRM: 'capstone-svc-conn'
-                commandOptions: '$(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
-                allowTelemetryCollection: false
-
+  - stage: Build
+    displayName: Build and push stage
+    jobs:
+      - job: Build
+        displayName: Build job
+        steps:
+          - task: Docker@2
+            inputs:
+              containerRegistry: 'acr-nextapp-con'
+              repository: 'nextjs-app1'
+              command: 'buildAndPush'
+              Dockerfile: '**/Dockerfile'
+              tags: |
+                latest
+                $(Build.BuildId)
+          - task: CopyFiles@2
+            inputs:
+              SourceFolder: '$(System.DefaultWorkingDirectory)/kube-manifests/'
+              Contents: |
+                deployment.yml
+                service.yml
+              TargetFolder: '$(Build.ArtifactStagingDirectory)'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+              ArtifactName: 'drop'
+              publishLocation: 'Container'
