--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,12 +16,22 @@ stages:
       - job: TerraformValidateJob
         continueOnError: false
         steps:
+          # Publishing Terraform manifests
           - task: PublishPipelineArtifact@1
-            displayName: Publish Artifacts
+            displayName: Publish Terraform Artifacts
             inputs:
               targetPath: '$(System.DefaultWorkingDirectory)/terraform-manifests'
               artifact: 'terraform-manifests-out'
               publishLocation: 'pipeline'
+              
+          # Publishing Kube-Manifests
+          - task: PublishPipelineArtifact@1
+            displayName: Publish Kube-Manifest Artifacts
+            inputs:
+              targetPath: '$(System.DefaultWorkingDirectory)/kube-manifests'
+              artifact: 'kube-manifests-out'
+              publishLocation: 'pipeline'
+
           - task: charleszipp.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-installer.TerraformInstaller@0
             inputs:
               terraformVersion: 'latest'
@@ -85,4 +95,3 @@ stages:
                     environmentServiceNameAzureRM: 'capstone-svc-conn'
                     commandOptions: '$(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
                     allowTelemetryCollection: false
-
