Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ stages:
               command: 'buildAndPush'
               repository: $(imageRepository)
               dockerfile: $(dockerfilePath)
-              containerRegistry: $(delanodocker)
+              containerRegistry: $(dockerRegistryServiceConnection)
               tags: |
                 $(tag)
                 
