Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ variables:
   - name: DEV_ENVIRONMENT
     value: delano
   - name: dockerRegistryServiceConnection
-    value: 'delanodocker'
+    value: 'DelCapDockConn'
   - name: imageRepository
     value: 'Socio-Sync'
   - name: containerRegistry
