--- a/kube-manifests/service.yml
+++ b/kube-manifests/service.yml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: "nextjs-app"
-  name: "nextjs-app"
+    app: "socio-sync-app"
+  name: "socio-sync-app"
 spec:
   ports:
     - port: 80
       protocol: TCP
       targetPort: 3000
   selector:
-    app: "nextjs-app"
+    app: "socio-sync-app"
   sessionAffinity: None
   type: LoadBalancer
