Update deployment.yml-added secret

--- a/kube-manifests/deployment.yml
+++ b/kube-manifests/deployment.yml
@@ -19,3 +19,6 @@ spec:
         image: delanocapstone.azurecr.io/socio-sync:latest
         ports:
         - containerPort: 3000
+      imagePullSecrets:
+      - name: acr-auth
+
