Update deployment.yml-added image pull always

--- a/kube-manifests/deployment.yml
+++ b/kube-manifests/deployment.yml
@@ -19,6 +19,7 @@ spec:
         image: delanocapstone.azurecr.io/socio-sync
         ports:
         - containerPort: 3000
+        imagePullPolicy: Always
       imagePullSecrets:
       - name: acr-auth
 
