Update deployment.yml-secrets added

--- a/kube-manifests/deployment.yml
+++ b/kube-manifests/deployment.yml
@@ -20,4 +20,7 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
+      imagePullSecrets:
+      - name: my-acr-secret
+
 
