--- a/kube-manifests/deployment.yml
+++ b/kube-manifests/deployment.yml
@@ -21,6 +21,6 @@ spec:
         ports:
         - containerPort: 3000
       imagePullSecrets:
-      - name: my-acr-secret
+      - name: acr-auth
 
 
