--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,19 @@ stages:
                 $(tag)
                 latest
 
+          # Tag the image for Docker Hub
+          - script: |
+              docker tag $(imageRepositoryAzure):$(tag) $(imageRepositoryDockerHub):$(tag)
+              docker tag $(imageRepositoryAzure):latest $(imageRepositoryDockerHub):latest
+            displayName: 'Tag Image for Docker Hub'
+
+          # Log in to Docker Hub
+          - task: Docker@2
+            displayName: Login to Docker Hub
+            inputs:
+              command: 'login'
+              containerRegistry: $(dockerHubServiceConnection)
+
           - task: Docker@2
             displayName: Push the image to Docker Hub
             inputs:
