--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,11 +11,11 @@ variables:
   - name: azureDockerRegistryServiceConnection
     value: 'DelCapDockConn'
   - name: dockerHubServiceConnection
-    value: 'DockerHubServiceConnection' # Assuming you've set up a Docker Hub service connection in Azure DevOps
+    value: 'DockerHubServiceConnection' 
   - name: imageRepositoryAzure
-    value: 'Socio-Sync'
+    value: 'socio-sync'  # Changed to lowercase as per Docker naming standards
   - name: imageRepositoryDockerHub
-    value: 'Kingmaven/socio-sync'
+    value: 'Kingmaven/socio-sync' # This should remain as is, only the repository name should be lowercase.
   - name: dockerfilePath
     value: '$(System.DefaultWorkingDirectory)/Dockerfile'
   - name: tag
@@ -39,13 +39,11 @@ stages:
                 $(tag)
                 latest
 
-          # Tag the image for Docker Hub
           - script: |
               docker tag $(imageRepositoryAzure):$(tag) $(imageRepositoryDockerHub):$(tag)
               docker tag $(imageRepositoryAzure):latest $(imageRepositoryDockerHub):latest
             displayName: 'Tag Image for Docker Hub'
 
-          # Log in to Docker Hub
           - task: Docker@2
             displayName: Login to Docker Hub
             inputs:
