--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,12 +21,13 @@ variables:
   - name: tag
     value: '$(Build.BuildId)'
 
+
 stages:
-  - stage: BuildAndPushDocker
-    displayName: Build and push Docker image
+  - stage: BuildAndPushToACR
+    displayName: Build and push Docker image to ACR
     jobs:
-      - job: BuildDocker
-        displayName: Build Docker
+      - job: BuildAndPushToACR
+        displayName: Build and Push to Azure ACR
         steps:
           - task: Docker@2
             displayName: Build and push an image to Azure ACR
@@ -39,21 +40,16 @@ stages:
                 $(tag)
                 latest
 
-          - script: |
-              docker tag $(imageRepositoryAzure):$(tag) $(imageRepositoryDockerHub):$(tag)
-              docker tag $(imageRepositoryAzure):latest $(imageRepositoryDockerHub):latest
-            displayName: 'Tag Image for Docker Hub'
-
+  - stage: BuildAndPushToDockerHub
+    displayName: Build and push Docker image to Docker Hub
+    jobs:
+      - job: BuildAndPushToDockerHub
+        displayName: Build and Push to Docker Hub
+        steps:
           - task: Docker@2
-            displayName: Login to Docker Hub
+            displayName: Build and push an image to Docker Hub
             inputs:
-              command: 'login'
-              containerRegistry: $(dockerHubServiceConnection)
-
-          - task: Docker@2
-            displayName: Push the image to Docker Hub
-            inputs:
-              command: 'push'
+              command: 'buildAndPush'
               repository: $(imageRepositoryDockerHub)
               dockerfile: $(dockerfilePath)
               containerRegistry: $(dockerHubServiceConnection)
