--- a/kube-manifests/deployment.yml
+++ b/kube-manifests/deployment.yml
@@ -16,11 +16,11 @@ spec:
     spec:
       containers:
       - name: socio-sync-container
-        image: delanocapstone.azurecr.io/socio-sync:latest
+        image: kingmaven/socio-sync:latest 
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
-      imagePullSecrets:
-      - name: acr-auth
+    
+
 
 
