--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -98,4 +98,53 @@ stages:
               command: 'validate'
               workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
               allowTelemetryCollection: false
+              
+              
+
+
+
+# The final stage. This deploys Azure Kubernetes Service (AKS) clusters.
+  - stage: DeployAKSClusters
+    jobs:
+      - deployment: DeployDevAKSCluster
+        displayName: DeployDevAKSCluster
+        pool:
+          vmImage: 'ubuntu-latest'
+        environment: $(DEV_ENVIRONMENT)
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - task: DownloadSecureFile@1
+                  displayName: Download SSH Key
+                  name: sshkey
+                  inputs:
+                    secureFile: 'aks-terraform-devops-ssh-key-ubuntu.pub'
+                - task: TerraformTaskV4@4
+                  inputs:
+                    provider: 'azurerm'
+                    command: 'init'
+                    workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                    backendServiceArm: 'capstone-svc-conn'
+                    backendAzureRmResourceGroupName: 'terraform-storage-rg'
+                    backendAzureRmStorageAccountName: 'terraformstatedelano'
+                    backendAzureRmContainerName: 'tfstatefiles'
+                    backendAzureRmKey: 'aks-$(DEV_ENVIRONMENT).tfstate'
+                    allowTelemetryCollection: false
+                - task: TerraformTaskV4@4
+                  inputs:
+                    provider: 'azurerm'
+                    command: 'plan'
+                    workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                    environmentServiceNameAzureRM: 'capstone-svc-conn'
+                    commandOptions: '-var ssh_public_key=$(sshkey.secureFilePath) -var environment=$(DEV_ENVIRONMENT) -out $(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
+                    allowTelemetryCollection: false
+                - task: TerraformTaskV4@4
+                  inputs:
+                    provider: 'azurerm'
+                    command: 'apply'
+                    workingDirectory: '$(Pipeline.Workspace)/terraform-manifests-out'
+                    environmentServiceNameAzureRM: 'capstone-svc-conn'
+                    commandOptions: '$(Pipeline.Workspace)/terraform-manifests-out/$(DEV_ENVIRONMENT)-$(Build.BuildId).out'
+                    allowTelemetryCollection: false
 
